@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-03T08:13:55Z",
-  "count_outdated" : 153,
-  "uniques_outdated" : 128,
-  "count" : 165,
-  "uniques" : 139,
+  "timestamp" : "2023-08-04T08:13:54Z",
+  "count_outdated" : 154,
+  "uniques_outdated" : 129,
+  "count" : 166,
+  "uniques" : 140,
   "clones" : [
-    {
-      "timestamp": "2023-07-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-25T00:00:00Z",
       "count": 1,
@@ -79,6 +70,15 @@
     },
     {
       "timestamp": "2023-08-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
