@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2023-07-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-25T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -44,6 +39,11 @@
     },
     {
       "timestamp": "2023-08-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
