@@ -1,3 +1,12 @@
+2023-08-04T08:13:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5759990192 # 1052
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-04
+* notice: last 14d: unq all: 4 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 128 153 / 139 165
+* notice: next accum: outdated-unq outdated-all / unq all: 129 154 / 140 166
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-07-21] / [2023-08-04]
+
 2023-08-03T08:13:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5748270026 # 1049
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-03
